<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="wolvesden_summary_title">Customize your device</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lock screen</string>
    <string name="heads_up_category">Heads up</string>
    <string name="statusbar_category">Status bar</string>
    <string name="navigation_category">Navigation</string>
    <string name="multitasking_category">Multi-Tasking</string>
    <string name="statusbar_notifications_category">Status bar notifications</string>
    <string name="smartpixels_title">Smart Pixels</string>
    <string name="headset_title">Headset</string>
    <string name="button_title">Buttons</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="torch_title">Torch</string>
    <string name="battery_title">Battery settings</string>
    <string name="batterybar_title">Battery bar</string>
    <string name="leds_title">Lights</string>
    <string name="battery_light_settings">Battery charging light</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="notification_light_settings">Notifications light</string>
    <string name="powermenu_title">Power menu</string>
    <string name="navbar_title">Navbar</string>
    <string name="notifications_title">Notifications</string>
    <string name="various_system_title">Various</string>
    <string name="various_lockscreen_title">Various</string>
    <string name="various_statusbar_title">Various</string>
    <string name="various_navigation_title">Various</string>
    <string name="various_multitasking_title">Various</string>
    <string name="recent_settings_title">Recents</string>
    <string name="status_bar_clock_title">Clock options</string>
    <string name="statusbar_battery_title">Statusbar battery</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="status_bar_quick_qs_pulldown">Quick Pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">Pulldown statusbar from right side to show QS panel</string>
    <string name="double_tap_sleep_lockscreen">Double tap to sleep on lockscreen</string>
    <string name="double_tap_sleep_gesture_title">Double tap status bar to sleep</string>
    <string name="swap_volume_buttons">Swap volume buttons rotation based</string>
    <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
    <string name="volume_keys_control_media_stream_summary">Volume panel will show media volume slider by default</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="headset_connect_player_title">Launch music app on headset connection</string>
    <string name="headset_connect_player_disabled">Disabled</string>
    <string name="headset_connect_player_wired">When wired headset is plugged in</string>
    <string name="headset_connect_player_bt_no_carkit">When BT headset (no carkit) is plugged in</string>
    <string name="headset_connect_player_bt">When BT headset is plugged in</string>
    <string name="headset_connect_player_both_no_carkit">When wired or BT headset (no carkit) is plugged in</string>
    <string name="headset_connect_player_both">When wired or BT headset is plugged in</string>
    <string name="ringtone_focus_mode_title">Where to play ringtones from</string>
    <string name="ringtone_focus_mode_dynamic">From headset if connected and playing music</string>
    <string name="ringtone_focus_mode_stock">"From speakerphone (aosp default)"</string>
    <string name="toast_icon_title">App\'s icon in toast</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="torch_power_button_gesture_title">Screen off power button torch</string>
    <string name="torch_power_button_gesture_none">Disabled</string>
    <string name="torch_power_button_gesture_dt">Double tap power to toggle torch (will add a small delay to single tap)</string>
    <string name="torch_power_button_gesture_lp">Long press power to toggle torch</string>
    <string name="status_bar_battery_saver_color_title">Statusbar battery saver color</string>
    <string name="status_bar_battery_saver_color_summary">Note: If battery saver already enabled, for new color be effective, disbale and renable battery saver!</string>
    <string name="qs_footer_warnings_title">QS footer warnings</string>
    <string name="qs_footer_warnings_summary">Display a warning at bottom of QS panel when network is monitored by external apps or vpn</string>
    <string name="qs_rows_columns_title">QS rows and columns</string>
    <string name="qs_rows_portrait_title">Tiles rows on portrait</string>
    <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
    <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
    <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
    <string name="qs_tile_title_visibility_title">Show tiles title</string>
    <string name="qs_small_tiles_title">Small QS tiles</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
    <string name="battery_light_cat">Battery light color when charging</string>
    <string name="battery_light_low_color">Low battery</string>
    <string name="battery_light_medium_color">Medium battery</string>
    <string name="battery_light_full_color">Almost full battery</string>
    <string name="battery_light_reallyfull_color">Full (100) battery</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="lockscreen_power_menu_disabled_title">No power menu when locked</string>
    <string name="lockscreen_power_menu_disabled_summary">Disable power menu on secure lockscreen</string>
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
    <string name="vibration_on_charge_state_changed_title">Vibrate on plug</string>
    <string name="vibration_on_charge_state_changed_summary">Vibrate when connecting or disconnecting a power source</string>
    <string name="brightness_icon_title">Brightness icon </string>
    <string name="brightness_icon_summary">Show a brightness icon to the right of the brighness slider to adjust auto-brightness</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_screenrecord">Screenrecord</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_restart">Restart</string>
    <string name="powermenu_restart_recovery">Advanced restart</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="powermenu_users">Users</string>
    <string name="lockscreen_battery_info_title">Lockscreen battery info</string>
    <string name="lockscreen_battery_info_summary">Display negotiated charger max current-voltage and battery temperature on lockscreen while charging</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="power_notification_title">Power notification controls</string>
    <string name="volbtn_down_zen_title">Volume down for do not disturb</string>
    <string name="volbtn_down_zen_summary">Allow volume down to enter do not disturb mode</string>
    <string name="volbtn_up_zen_title">Volume up in do not disturb</string>
    <string name="volbtn_up_zen_summary">Allow volume up to exit do not disturb mode</string>
    <string name="lockscreen_tuner_title">Lockscreen shortcuts</string>
    <string name="navbar_tuner_title">Navbar buttons</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_stoplist_summary">Disable heads up notifications in these applications</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_stoplist_title">Stoplist</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="less_boring_heads_up_title">Make heads up less annoying</string>
    <string name="less_boring_heads_up_summary">Show heads up only for dialer or messaging app if they are not in foreground</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_time_out_summary">Peeking notifications will show for <xliff:g id="number">%d</xliff:g> seconds</string>
    <string name="heads_up_time_out_2sec">2 seconds</string>
    <string name="heads_up_time_out_4sec">4 seconds</string>
    <string name="heads_up_time_out_5sec">5 seconds</string>
    <string name="heads_up_time_out_6sec">6 seconds</string>
    <string name="heads_up_time_out_8sec">8 seconds</string>
    <string name="heads_up_time_out_10sec">10 seconds</string>
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="systemui_theme_style_title">Tiles panel and power menu style</string>
    <string name="wakelock_blocker_title">Wakelock blocker</string>
    <string name="wakelock_blocker_summary">Block system wakelocks</string>
    <string name="alarm_blocker">Alarm blocker</string>
    <string name="alarm_blocker_summary">Block alarms while screen off</string>
    <string name="face_auto_unlock_title">Face auto unlock</string>
    <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
    <string name="lockscreen_item_category">Lockscreen items</string>
    <string name="show_lockscreen_clock_title">Clock widget</string>
    <string name="show_lockscreen_clock_summary">Change the clock widget\'s visibility</string>
    <string name="show_lockscreen_date_title">Date widget</string>
    <string name="show_lockscreen_date_summary">Change the date\'s visibility underneath the clock widget</string>
    <string name="show_lockscreen_alarm_title">Alarm text</string>
    <string name="show_lockscreen_alarm_summary">Change the alarm text\'s visibility underneath the clock widget</string>
    <string name="lockscreen_clock_style_category_title">Lockscreen items style</string>
    <string name="lockscreen_clock_selection_title">Clock style</string>
    <string name="lockscreen_date_selection_title">Date style</string>
</resources>