<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 GZR

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="double_tap_sleep_lockscreen"
        android:title="@string/double_tap_sleep_lockscreen"
        android:defaultValue="true" />

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="lockscreen_media_metadata"
        android:title="@string/media_art_title"
        android:summary="@string/media_art_summary"
        android:defaultValue="false" />

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="lockscreen_power_menu_disabled"
        android:title="@string/lockscreen_power_menu_disabled_title"
        android:summary="@string/lockscreen_power_menu_disabled_summary"
        android:defaultValue="true" />

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="lockscreen_battery_info"
        android:title="@string/lockscreen_battery_info_title"
        android:summary="@string/lockscreen_battery_info_summary"
        android:defaultValue="false" />

    <com.gzr.wolvesden.preference.SecureSettingSwitchPreference
        android:key="face_auto_unlock"
        android:title="@string/face_auto_unlock_title"
        android:summary="@string/face_auto_unlock_summary"
        android:defaultValue="true" />

<PreferenceCategory
     android:title="@string/lockscreen_item_category"/>

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="show_lockscreen_clock"
        android:title="@string/show_lockscreen_clock_title"
        android:summary="@string/show_lockscreen_clock_summary"
        android:defaultValue="true" />

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="show_lockscreen_date"
        android:title="@string/show_lockscreen_date_title"
        android:summary="@string/show_lockscreen_date_summary"
        android:defaultValue="true" />
    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="show_lockscreen_alarm"
        android:title="@string/show_lockscreen_alarm_title"
        android:summary="@string/show_lockscreen_alarm_summary"
        android:defaultValue="true" />

<PreferenceCategory
        android:key="lockscreen_clock_style_category"
        android:title="@string/lockscreen_clock_style_category_title" >
        <ListPreference
            android:key="lockscreen_clock_selection"
            android:title="@string/lockscreen_clock_selection_title"
            android:entries="@array/lockscreen_clock_selection_entries"
            android:entryValues="@array/lockscreen_clock_selection_values"
            android:defaultValue="0" />

        <ListPreference
            android:key="lockscreen_date_selection"
            android:title="@string/lockscreen_date_selection_title"
            android:entries="@array/lockscreen_date_selection_entries"
            android:entryValues="@array/lockscreen_date_selection_values"
            android:defaultValue="0" />
    </PreferenceCategory>
</PreferenceScreen>
