<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 Ground Zero Roms

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/system_category"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <Preference
        android:key="button"
        android:title="@string/button_title"
        android:fragment="com.gzr.wolvesden.fragments.Button" />

    <Preference
        android:key="torch"
        android:title="@string/torch_title"
        android:fragment="com.gzr.wolvesden.fragments.Torch" />

    <Preference
        android:key="leds"
        android:fragment="com.gzr.wolvesden.fragments.LedSettings"
        android:title="@string/leds_title" />

    <Preference
        android:title="@string/app_ops_settings"
        android:fragment="com.android.settings.applications.AppOpsSummary"/>

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="toast_icon"
        android:title="@string/toast_icon_title"
        android:summary="@string/toast_icon_summary"
        android:defaultValue="false" />

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="wake_when_plugged_or_unplugged"
        android:title="@string/wake_when_plugged_or_unplugged_title"
        android:summary="@string/wake_when_plugged_or_unplugged_summary"
        android:defaultValue="false" />

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="vibration_on_charge_state_changed"
        android:title="@string/vibration_on_charge_state_changed_title"
        android:summary="@string/vibration_on_charge_state_changed_summary"
        android:defaultValue="true" />

</PreferenceScreen>
