<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <Preference
            android:key="batterybar"
            android:fragment="com.gzr.wolvesden.fragments.BatteryBarSettings"
            android:title="@string/batterybar_title"/>

    <Preference
        android:key="alarm_blocker"
        android:title="@string/alarm_blocker"
        android:summary="@string/alarm_blocker_summary"
        android:fragment="com.gzr.wolvesden.fragments.AlarmBlocker"/>

    <Preference
        android:key="wakelock_blocker"
        android:title="@string/wakelock_blocker_title"
        android:summary="@string/wakelock_blocker_summary"
        android:fragment="com.gzr.wolvesden.fragments.WakeLockBlocker"/>

    <ListPreference
        android:key="systemui_theme_style"
        android:title="@string/systemui_theme_style_title"
        android:persistent="false"
        android:entries="@array/systemui_theme_style_entries"
        android:entryValues="@array/systemui_theme_style_values" />

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="wake_when_plugged_or_unplugged"
        android:title="@string/wake_when_plugged_or_unplugged_title"
        android:summary="@string/wake_when_plugged_or_unplugged_summary"
        android:defaultValue="false" />

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="vibration_on_charge_state_changed"
        android:title="@string/vibration_on_charge_state_changed_title"
        android:summary="@string/vibration_on_charge_state_changed_summary"
        android:defaultValue="true" />

</PreferenceScreen>
